# libprotoserial

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  build_bindings.sh  build_tests.sh  clean_tests.sh  index.html  makefile  mkdocs.yml  run_tests.sh  search.html
Developers/Using_MkDocs/: index.html
For_Developers/Design/Callbacks/: index.html
For_Developers/Design/Data/Bytes_Container/: index.html
For_Developers/Design/General/: index.html
For_Developers/Design/Layers/Fragmentation/: index.html
For_Developers/Design/Layers/Interface/: index.html
For_Developers/Design/Layers/Ports/: index.html
For_Developers/Using_MkDocs/: index.html
docs/: architecture.md  design.xopp  index.md
docs/Developers/: Using_MkDocs.md
docs/For_Developers/: Using_MkDocs.md
docs/For_Developers/Design/: Callbacks.md  General.md
examples/interface_loopback/: CMakeLists.txt  main.cpp  run.sh
helpers/: run_tests.sh
include/libprotoserial/: clock.hpp  interface.hpp  libconfig.hpp
include/libprotoserial/data/: container.hpp
include/libprotoserial/fragmentation/: base_handler.hpp  bypass_handler.hpp  fragmentation.hpp  fragmentation_handler.hpp  headers.hpp  transfer.hpp
include/libprotoserial/interface/: buffered.hpp  footers.hpp  parsers.hpp
include/libprotoserial/services/: command_client.hpp  command_server.hpp  echo.hpp  link_control.hpp
include/libprotoserial/testing/: random.hpp
include/libprotoserial/utils/: bit_rate.hpp  kiss_protocol.hpp  object_id.hpp  observer.hpp
libprotoserial/: byte.hpp  clock.hpp  container.cpp  container.hpp  container.test.cpp  fragmentation.hpp  interface.hpp  interface.test.cpp  libconfig.hpp  loopback_interface.hpp  observer.hpp  observer.test.cpp  packet.hpp  protocol.cpp  protocol.hpp  protostacks.hpp  stream.cpp  stream.hpp  stream.test.cpp  transfer.hpp
libprotoserial/data/: byte.hpp  container.hpp  prealloc_size.hpp
libprotoserial/fragmentation/: base_handler.hpp  bypass_handler.hpp  fragmentation.hpp  headers.hpp  id_factory.hpp  minimal.hpp  transfer.hpp  transfer_handler.hpp
libprotoserial/interface/: buffered.hpp  buffered_parsed.hpp  footers.hpp  fragment.hpp  headers.hpp  interface.hpp  interface_id.hpp  loopback.hpp  parsers.hpp  usbcdc.hpp  virtual.hpp
libprotoserial/interface/linux/: uart.hpp
libprotoserial/interface/stm32/: interrupts.hpp  uart.hpp  usbcdc.hpp
libprotoserial/interface/stm32_zst/: rs485.hpp  uart.hpp  usbcdc.hpp
libprotoserial/interface/testing/: loopback.hpp  virtual.hpp
libprotoserial/ports/: headers.hpp  packet.hpp  ports.hpp
libprotoserial/python/: pybind11.cpp
libprotoserial/services/: base.hpp  command.hpp  command_client.hpp  command_server.hpp  echo.hpp  link_control.hpp  service_base.hpp
libprotoserial/services/built_in/: link_control.hpp
libprotoserial/services/common/: command_status.hpp
libprotoserial/utils/: bit_rate.hpp  kiss_protocol.hpp  object_id.hpp  observer.hpp
search/: search_index.json
tests/: fragmentation.cpp  interface.cpp  json.cpp  linux_uart.cpp  observer.cpp  readme.md  tests.cpp
tests/helpers/: random.hpp  simulation.hpp  testers.hpp
(+13 files in other folders)
